frontend/test/should_fail/index_pattern_edge_index_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{ascending(Ni >= 0, Ni <= 1)}->;
	
	modify {
	}
}
